# MCUB-fork

./: .gitignore  API_DOC.md  LICENSE  README.md  pyproject.toml  requirements-termux.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  __main__.py  version.py
core/console/: config.cfg  config.py  shell.py
core/console/base/: config_parser.py  display.py  lockfile.py  manager.py  resolver.py
core/kernel/: __init__.py  bot.py  mini.py  standard.py  test_kernel.py  zen.py
core/langpacks/: __init__.py  en.yaml  linux.yaml  rofl.yaml  ru.yaml
core/lib/: .gitignore  kernel_core.py  kernel_handlers.py  kernel_lifecycle.py  kernel_pipeline.py
core/lib/base/: client.py  (+3 more)
core/web/: __init__.py  app.py  app_keys.py  auth.py  plugin_manager.py  routes.py
core_inline/: __init__.py  bot.py  handlers.py  strings.py
core_inline/api/: __init__.py  core.py  inline.py
core_inline/lib/: __init__.py  manager.py
debugger/: __init__.py  cli.py  core.py  rules.py  types.py
debugger/tests/: __init__.py  test_debugger.py
doc/api/: archives.md  commands.md  database.md  dependencies.md  errors.md  events.md  exceptions.md  kernel.md  module-api.md  module-config.md  scheduler.md  types.md
doc/examples/: bot_module.py  echo_module.py  greeting_module.py  search_module.py  test_module.py  todo_module.py  welcome_module.py
doc/getting-started/: index.md
doc/guides/: best-practices.md  custom-core.md  i18n.md  module-structure.md  pipeline.md
doc/inline/: callbacks.md  inline-manager.md  inline-results.md
doc/lib/: xlib.md
doc/reference/: telethon.md
doc/registration/: class-style.md  enhanced-api.md  lifecycle.md  new-methods.md  watchers.md
doc/utils/: colors.md  core-utils.md  examples.md
modules/: MCUB_info.py  api_protection.py  command.py  config.py  eval.py  evaluator.py  installation.py  loader.py  log_bot.py  man.py  settings.py  terminal.py  tester.py  tr.py  translations.py  trusted.py  updates.py  userbot-backup.py  utils-piped.py
scripts/: bootstrap.sh  check.sh  install-hidden-characters-detector.sh  install-requiremets-termux.sh  run-core.sh
tests/: conftest.py  requirements-dev.txt  run_tests.py  test_api_extender.py  test_api_protection.py  test_archive_manager.py  test_arg_parser.py  test_cache.py  test_callback_permissions.py  test_commands.py  test_database_manager_hard.py  test_db.py  test_debug_logging.py  test_emoji_parser.py  test_events.py  test_helpers.py  test_heroku_module_compat.py  test_hikka_compat.py  test_hikka_detect_module_type.py  test_hikka_strings_shim.py  test_inline.py  test_inline_bot_provision.py  test_integration.py  test_kernel.py  test_kernel_pipeline_syntax.py  test_logger.py  test_man_module.py  test_message_helpers_utils.py  test_module_base_runtime.py  test_module_config.py  test_module_isolation.py  test_module_loader.py  test_modules.py  test_permissions.py  test_platform_utils.py  test_raw_html.py  test_register.py  test_repository_manager.py  test_restart_utils.py  test_scheduler.py  (+3 more)
tests/mocks/: telegram_client.py
thoughts/ledgers/: CONTINUITY_ses_1b27.md
utils/: __init__.py  arg_parser.py  custom_placeholders.py  emoji_parser.py  helpers.py  html_parser.py  message_helpers.py  platform.py  raw_html.py  restart.py  security.py  strings.py
(+57 files in other folders)
